[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/game/game.gd" type="Script" id=1]
[ext_resource path="res://assets/mothership/mothership1.png" type="Texture" id=2]
[ext_resource path="res://scenes/ship/ship01.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/particle-collector/pcm01.png" type="Texture" id=4]
[ext_resource path="res://scenes/harvest_point/harvest_point.tscn" type="PackedScene" id=5]
[ext_resource path="res://resources/crystals/sulfur.tres" type="Resource" id=6]
[ext_resource path="res://scenes/game_over_dialog/game_over_dialog.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/story_dialog/story_dialog.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/story/story_manager.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/cave_isometric/cave_isometric.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/crystals/azurite.tres" type="Resource" id=11]
[ext_resource path="res://resources/crystals/carbon.tres" type="Resource" id=12]
[ext_resource path="res://assets/particle-collector/pcm02.png" type="Texture" id=13]
[ext_resource path="res://assets/particle-collector/pcm03.png" type="Texture" id=14]

[node name="game" type="Node2D"]
script = ExtResource( 1 )
dust_to_collect = 20

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color( 0.235294, 0.235294, 0.235294, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="HarvestPoints" type="Node2D" parent="."]

[node name="Carbon" parent="HarvestPoints" instance=ExtResource( 5 )]
position = Vector2( 360, 15 )
inventory_item = ExtResource( 12 )
texture = ExtResource( 14 )

[node name="Sulfur" parent="HarvestPoints" instance=ExtResource( 5 )]
position = Vector2( -61, 623 )
inventory_item = ExtResource( 6 )
texture = ExtResource( 4 )

[node name="Azurite" parent="HarvestPoints" instance=ExtResource( 5 )]
position = Vector2( -193, 64 )
inventory_item = ExtResource( 11 )
texture = ExtResource( 13 )

[node name="Spaceship" parent="." instance=ExtResource( 3 )]
max_range = 500000

[node name="CaveIsometric" parent="." instance=ExtResource( 10 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverDialog" parent="CanvasLayer" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
mouse_filter = 2

[node name="StoryDialog" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="StoryManager" parent="." instance=ExtResource( 9 )]

[connection signal="ship_clicked_outside_range" from="Spaceship" to="StoryManager" method="on_clicked_outside_range"]
[connection signal="ship_exploded" from="Spaceship" to="." method="_on_Spaceship_ship_exploded"]
[connection signal="ship_submerged" from="Spaceship" to="." method="_on_Spaceship_ship_submerged"]
[connection signal="new_game" from="CanvasLayer/GameOverDialog" to="." method="on_game_over_dialog_new_game"]
[connection signal="on_story_message" from="StoryManager" to="." method="on_story_message"]
